--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                 <div id="aboutMe">
                         <h3 class="text-center display-4 my-4 title">About the Dude</h3>
                         <hr>
-                        <p><strong id="hi">Hi</strong>, welcome to my website fam, my name is Oranye Nonso that you already know, you can call me nocdegenius or nonix but for my guys that we go way back you can call me x-axis or orange if you know the history attached to those nicknames</p>
-                        <p>As a good and loyal member of the igbo load community I say <strong>nno</strong>, I am a strong citizen of Nigeria and a proud son of the Onitsha kingdom, yes I said kingdom we are powerful that way. Currently I reside in Awka town a.k.a A-town but movement is always happening and I could be close to your like your friendly neighborhood Spiderman anytime any day.</p>
+                        <p><strong id="hi">Hi</strong>, welcome to my website fam, my name is Oranye Nonso that you already know, you can call me nocdegenius or nonix but for my guys that we go way back you can call me x-axis or orange if you know the history attached to those nicknames.</p>
+
+                        <p>As a good and loyal member of the igbo land community I say <strong>nno</strong>, I am a strong citizen of Nigeria and a proud son of the Onitsha kingdom, yes I said kingdom we are powerful that way. Currently I reside in Awka town a.k.a A-town but movement is always happening and I could be close to your like your friendly neighborhood Spiderman anytime any day.</p>
         
-                        <p>I went to fulfill the need for formal higher education in the institute of Nnamdi Azikiwe University, Awka, When I studied the elegant course of <strong>Electronics and Computer Engineering</strong> which really didn't live up to 50% of my expectation, note my expectations were very high.</p>
+                        <p>I went to fulfill the need for formal higher education in the institute of Nnamdi Azikiwe University, Awka, Where I studied the elegant course of <strong>Electronics and Computer Engineering</strong> which really didn't live up to 50% of my expectation, note my expectations were very high.</p>
         
                         <p>I know you want to know my hoodies and likes or maybe you don't really give a flying f***, but still I will complete this space with them anyway cause I also don't give a flying f***. I love to read, I read non-fictional books, fictional books, articles (thank you medium), comics (you should check out <strong>comicrepublic.com</strong>) and documentations (this is still new it might still be dropped, it is not so fun). Watching tv shows is another hobby of mine I think recently tv shows just trump movies and finally, I like to play around with code, the ones I have written or stolen from stackoverflow or codeproject.org.</p>
                 </div>
@@ -77,7 +78,7 @@
                     <div class="col-md-6 d-flex align-items-center justify-content-center">
                         <ul class="list">
                             <li>Programming basic Python console applications</li>
-                            <li>Development using Nodejs</li>
+                            <li>Web development using Nodejs</li>
                             <li>Working with mongodb in collaboration with nodejs</li>
                             <li>Good Interesting Communications</li>
                         </ul>    
