typo fixed, links added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
                         <p>I went to fulfill the need for formal higher education in the institute of Nnamdi Azikiwe University, Awka, Where I studied the elegant course of <strong>Electronics and Computer Engineering</strong> which really didn't live up to 50% of my expectation, note my expectations were very high.</p>
         
-                        <p>I know you want to know my hoodies and likes or maybe you don't really give a flying f***, but still I will complete this space with them anyway cause I also don't give a flying f***. I love to read, I read non-fictional books, fictional books, articles (thank you medium), comics (you should check out <strong>comicrepublic.com</strong>) and documentations (this is still new it might still be dropped, it is not so fun). Watching tv shows is another hobby of mine I think recently tv shows just trump movies and finally, I like to play around with code, the ones I have written or stolen from stackoverflow or codeproject.org.</p>
+                        <p>I know you want to know my hobbies and likes or maybe you don't really give a flying f***, but still I will complete this space with them anyway cause I also don't give a flying f***. I love to read, I read non-fictional books, fictional books, articles (thank you <strong><a href="https://www.medium.com" target="_blank">medium</a></strong>), comics (you should check out <strong><a href="https://www.comicrepublic.com" target="_blank">comicrepublic.com</a></strong>) and documentations (this is still new it might still be dropped, it is not so fun). Watching tv shows is another hobby of mine I think recently tv shows just trump movies and finally, I like to play around with code, the ones I have written or stolen from <strong><a href="https://www.stackoverflow.com">stackoverflow</a></strong> or <strong><a href="http://www.codeproject.org" target="_blank">codeproject.org</a></strong>.</p>
                 </div>
 
             </div>    
@@ -117,7 +117,7 @@
                 </div>
                 <div class="job mt-2 shadow jCenter">
                     <p><strong>Frontend Developer</strong>,Hng Internship Program<span><small class="period"> [April 2019 - May 2019, 1 month]</small></span></p>
-                    <p><strong>Location:</strong>Remote</p>
+                    <p><strong>Location:</strong> Remote</p>
                     <p><strong>Job Role:</strong></p>
                     <ul class="jobRole">
                         <li>Test of developed pages</li>
@@ -131,7 +131,7 @@
             <div class="col-md-12">
                 <footer class="footer">
                         <span>
-                                Made with <i class="fa fa-heart pulse"></i> by <a href="https://www.google.de/maps/place/Augsburger+Puppenkiste/@48.360357,10.903245,17z/data=!3m1!4b1!4m2!3m1!1s0x479e98006610a511:0x73ac6b9f80c4048f" target="_blank">RoqueSOLID</a>
+                                Made with <i class="fa fa-heart pulse"></i> by <a href="https://nonso.netlify.com" target="_blank">RoqueSOLID</a>
                             </span>
                 </footer>
 
