links added image resized and color changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="nav-item nav-link active" href="#">Oranye Nonso</a>
+            <a class="nav-item nav-link active" href="#" style="color: rgb(123, 228, 123)">Oranye Nonso</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
             </div>    
         </div>
         <div class="row">
-            <div class="col-md-12" style="border-bottom: 1px solid lightgray" id="skills">
+            <div class="col-md-12" id="skills">
                 <h3 class="text-center display-4 my-4 title">What I Can Do</h3>
                 <hr>
                 <div class="row">
@@ -72,7 +72,7 @@
                             <li>Programming with C#</li>
                             <li>Desktop application development</li>
                             <li>Development of reusable class library in C#</li>
-                            <li>Development of responsives websites and web apps using html, css, Js and BootStrap</li>
+                            <li>Development of responsive websites and web apps using html, css, Js and BootStrap</li>
                         </ul> 
                     </div>
                     <div class="col-md-6 d-flex align-items-center justify-content-center">
@@ -87,10 +87,21 @@
             </div>
 
         </div>
+        <div class="row" id="extra" style="padding: 20px">
+            <div class="col-md-4 d-flex align-items-center justify-content-center">
+                <a name="" id="" class="btn btn-outline-success more" href="#" role="button">Projects</a>
+            </div>
+            <div class="col-md-4 d-flex align-items-center justify-content-center">
+                <a name="" id="" class="btn btn-outline-success more" href="#" role="button">Books Read</a>
+            </div>
+            <div class="col-md-4 d-flex align-items-center justify-content-center">
+                <a name="" id="" class="btn btn-outline-success more" href="#" role="button">Favorite Tv Shows</a>   
+            </div>
+        </div>
 
         <div class="row">
             
-            <div class="col-md-12" >
+            <div class="col-md-12">
                 <h3 class="text-center display-4 my-4 title" id="Eee">Experience experience experience</h3>
                 <hr>
                 <div class="job mt-2 shadow jCenter">
