--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <title>My Projects</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="subtitles">
-            <h2 class="text-center display-4 my-4">Projects</h2>
+            <h2 class="my-4">Projects</h2>
         </div>
+
+        <main class="row">
+            <div class="col-md-3 mb-4">
+                <section class="project-card shadow-sm">
+                    <div>
+                        <img src="/assets/images/CSharp.png" class="project-img" />
+                    </div>
+                    <div class="py-2 px-2 project-txt">
+                        <div class="project-desc">
+                            <h5>BMI Calculator</h5>
+                            <p>A very simple bmi calculator, using for calculating body mass index.</p>
+                        </div>
+
+                        <div class="d-flex project-footer">
+                            <p class="project-stack"><b>C#, windows form</b></p>
+                            <div class="d-flex justify-content-end project-view-btn">
+                                <button class="btn btn-sm btn-outline-success"
+                                    onclick="openProject('https://github.com/nonicalx/bmi-calculator')">view</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+
+
+            <div class="col-md-3 mb-4">
+                <section class="project-card shadow-sm">
+                    <div>
+                        <img src="/assets/images/reactLogo.png" class="project-img" />
+                    </div>
+                    <div class="py-2 px-2 project-txt">
+                        <div class="project-desc">
+                            <h5>React Selective</h5>
+                            <p>A simple react app that allow multiple selection from dropdown, allows
+                                searching from any end-point & allow removal of perviously selected value.</p>
+                        </div>
+
+                        <div class="d-flex project-footer">
+                            <p class="project-stack"><b>React</b></p>
+                            <div class="d-flex justify-content-end project-view-btn">
+                                <button class="btn btn-sm btn-outline-success"
+                                    onclick="openProject('https://github.com/nonicalx/React-Selective')">view</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+
+            <div class="col-md-3 mb-4">
+                <section class="project-card shadow-sm">
+                    <div>
+                        <img src="/assets/images/CSharp.png" class="project-img" />
+                    </div>
+                    <div class="py-2 px-2 project-txt">
+                        <div class="project-desc">
+                            <h5>Simple Text Encryption</h5>
+                            <p>A desktop application for encrypting text in text files.</p>
+                        </div>
+
+                        <div class="d-flex project-footer">
+                            <p class="project-stack"><b>C#, windows form</b></p>
+                            <div class="d-flex justify-content-end project-view-btn">
+                                <button class="btn btn-sm btn-outline-success"
+                                    onclick="openProject('https://github.com/nonicalx/SimpleTextEncrytor')">view</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+
+
+            <div class="col-md-3 mb-4">
+                <section class="project-card shadow-sm">
+                    <div>
+                        <img src="/assets/images/flutter.png" class="project-img" />
+                    </div>
+                    <div class="py-2 px-2 project-txt">
+                        <div class="project-desc">
+                            <h5>Destini App</h5>
+                            <p>A mobile game that is about about the choices you make along you path based on a story.
+                            </p>
+                        </div>
+
+                        <div class="d-flex project-footer">
+                            <p class="project-stack"><b>dart, flutter</b></p>
+                            <div class="d-flex justify-content-end project-view-btn">
+                                <button class="btn btn-sm btn-outline-success"
+                                    onclick="openProject('https://github.com/nonicalx/SimpleTextEncrytor')">view</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+        </main>
     </div>
+
+    <script src='./assets/script.js'></script>
 </body>
+
 </html>
