update ui and data structure

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div id="aboutMe">
                     <h3 class="text-center display-4 my-4 title">About the Dude</h3>
                     <hr>
-                    <p><strong id="hi">Hi</strong>, My name is Oranye Nonso a software developer of all source pun
-                        intended, I do consider myself an introvert but I don't labels.
+                    <p><strong id="hi">Hi</strong>, My name is Oranye Nonso a software developer, I do consider myself
+                        an introvert but I don't do labels.
                         As a man of few hobbies, I love to read, I read non-fictional books, fictional books, articles
                         (thank you <strong><a href="https://www.medium.com" target="_blank">medium</a></strong>), comics
                         (you should check out <strong><a href="https://www.thecomicrepublic.com"
