--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 
         </div>
         <div class="row" id="extra" style="padding: 20px">
-            <div class="col-md-4 d-flex align-items-center justify-content-center">
+            <div class="col-4 d-flex align-items-center justify-content-center">
                 <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Projects</a>
             </div>
-            <div class="col-md-4 d-flex align-items-center justify-content-center">
+            <div class="col-4 d-flex align-items-center justify-content-center">
                 <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Books
                     Read</a>
             </div>
-            <div class="col-md-4 d-flex align-items-center justify-content-center">
+            <div class="col-4 d-flex align-items-center justify-content-center">
                 <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Favorite Tv
                     Shows</a>
             </div>
