update added portfolio button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             class="fa fa-medium"></i></span></a>
                 <a href="https://github.com/nonicalx" class="socials" target="_blank"><span><i
                             class="fa fa-github"></i></span></a>
+                <a class="btn btn-outline-secondary port_btn" href="/projects.html">portfolio</a>
             </form>
 
         </div>
