--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -21,8 +22,47 @@
     <title>My Projects</title>
 </head>
 
-<body onload="loadProjects()">
-    <div class="container-fluid">
+<body class="body" id="body" onload="loadProjects()">
+    <nav class="navbar navbar-expand-sm" id="navigator">
+        <div class="form-inline">
+            <i class="material-icons yellow_sun mr-1">wb_sunny</i>
+            <label class="switch">
+                <input type="checkbox" onclick="switchTheme()">
+                <span class="slider round"></span>
+            </label>
+            <i class="material-icons dark_moon ml-1">brightness_3</i>
+        </div>
+        <a class="nav-item nav-link active" href="#" style="color: rgb(123, 228, 123)">Oranye Nonso</a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-item nav-link linked_up" href="#aboutMe">About the dude</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link linked_up" href="#skills">What I Can Do</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link linked_up" href="#Eee">Exp</a>
+                </li>
+
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <a href="https://twitter.com/OranyeNonso" class="socials" target="_blank"><span><i
+                            class="fa fa-twitter"></i></span></a>
+                <a href="https://medium.com/@nonicalx" class="socials" target="_blank"><span><i
+                            class="fa fa-medium"></i></span></a>
+                <a href="https://github.com/nonicalx" class="socials" target="_blank"><span><i
+                            class="fa fa-github"></i></span></a>
+                <a class="btn btn-outline-secondary port_btn" href="/projects.html">portfolio</a>
+            </form>
+
+        </div>
+    </nav>
+    <div class="container-fluid pt-5">
         <div class="subtitles">
             <h2 class="my-4">Projects</h2>
         </div>
