update to content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <title>Oranye Nonso</title>
 </head>
 
@@ -40,7 +42,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-item nav-link linked_up" href="#aboutMe">About the dude</a>
+                    <a class="nav-item nav-link linked_up" href="#aboutMe">About me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-item nav-link linked_up" href="#skills">What I Can Do</a>
@@ -72,11 +74,10 @@
             </div>
             <div class="col-md-8 d-flex align-items-center justify-content-center">
                 <div id="aboutMe">
-                    <h3 class="text-center display-4 my-4 title">About the Dude</h3>
+                    <h3 class="text-center display-4 my-4 title">About me</h3>
                     <hr>
-                    <p><strong id="hi">Hi</strong>, My name is Oranye Nonso a software developer, I do consider myself
-                        an introvert but I don't do labels.
-                        As a man of few hobbies, I love to read, I read non-fictional books, fictional books, articles
+                    <p class="text-align: justify;"><strong id="hi">Hi</strong>, My name is Oranye Nonso<br/> a software developer, with a vast skill in developing frontend applications that are scalable and responsive.
+                        <!-- As a man of few hobbies, I love to read, I read non-fictional books, fictional books, articles
                         (thank you <strong><a href="https://www.medium.com" target="_blank">medium</a></strong>), comics
                         (you should check out <strong><a href="https://www.thecomicrepublic.com"
                                 target="_blank">comicrepublic</a></strong>). Watching tv shows is another hobby of mine
@@ -84,7 +85,7 @@
                         code, the ones I have written or stolen from <strong><a href="https://www.stackoverflow.com"
                                 target="_blank">stackoverflow</a></strong> or <strong><a
                                 href="http://www.codeproject.com" target="_blank">codeproject</a></strong>.</p>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -96,19 +97,14 @@
                     <div class="col-md-6 d-flex align-items-center justify-content-center"
                         style="border-right: 1px solid lightgray">
                         <ul class="list">
-                            <li>Programming with C#</li>
-                            <li>Desktop application development</li>
-                            <li>Development of reusable class library in C#</li>
-                            <li>Development of responsive websites and web apps using html, css, Js and BootStrap</li>
+                            <li>Frontend development with React.js</li>
+                            <li>Mobile App Development with React Native</li>
                         </ul>
                     </div>
                     <div class="col-md-6 d-flex align-items-center justify-content-center">
                         <ul class="list">
-                            <li>Programming basic Python console applications</li>
-                            <li>Web development using Node.js</li>
-                            <li>Frontend development with React.js</li>
-                            <li>Working with mongodb in collaboration with nodejs</li>
-                            <li>Good Interesting Communications</li>
+                            <li>Development of responsive websites and web apps using html, css, Js and BootStrap</li>
+                            <li>Mobile Development with Flutter</li>
                         </ul>
                     </div>
                 </div>
@@ -137,7 +133,7 @@
 
                 <div class="job mt-2 card_shadow jCenter">
                     <p><strong>Full-Stack Developer</strong>,Genesys tech Hub<span><small class="period"> [June 2019 -
-                                present, <small id="count">11</small> months]</small></span></p>
+                                present, 1 year, <small id="count">11</small> months]</small></span></p>
                     <p><strong>Location:</strong> Centenary City, Enugu State</p>
                     <p><strong>Job Role:</strong></p>
                     <ul class="jobRole">
@@ -187,7 +183,7 @@
 
             </div>
         </div>
-        <div class="row">
+        <div class="row mx-0 w-100">
             <div class="col-md-12">
                 <footer class="footer">
                     <span>
