--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div id="aboutMe">
                     <h3 class="text-center display-4 my-4 title">About me</h3>
                     <hr>
-                    <p class="text-align: justify;"><strong id="hi">Hi</strong>, My name is Oranye Nonso<br/> a software developer, with a vast skill in developing frontend applications that are scalable and responsive.
+                    <p class="text-align: justify;"><strong id="hi">Hi</strong>, my name is Oranye Nonso.<br/>I am a software developer, with a vast skill and knowledge in developing frontend applications that are scalable and responsive.
                         <!-- As a man of few hobbies, I love to read, I read non-fictional books, fictional books, articles
                         (thank you <strong><a href="https://www.medium.com" target="_blank">medium</a></strong>), comics
                         (you should check out <strong><a href="https://www.thecomicrepublic.com"
