--- a/index.html
+++ b/index.html
@@ -1,201 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    <title>Oranye Nonso</title>
-</head>
-
-<body class="body" id="body">
-    <nav class="navbar navbar-expand-sm" id="navigator">
-        <div class="form-inline">
-            <i class="material-icons yellow_sun mr-1">wb_sunny</i>
-            <label class="switch">
-                <input type="checkbox" onclick="switchTheme()">
-                <span class="slider round"></span>
-            </label>
-            <i class="material-icons dark_moon ml-1">brightness_3</i>
-        </div>
-        <a class="nav-item nav-link active" href="#" style="color: rgb(123, 228, 123)">Oranye Nonso</a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-item nav-link linked_up" href="#aboutMe">About me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link linked_up" href="#skills">What I Can Do</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link linked_up" href="#Eee">Exp</a>
-                </li>
-
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <a href="https://twitter.com/OranyeNonso" class="socials" target="_blank"><span><i
-                            class="fa fa-twitter"></i></span></a>
-                <a href="https://medium.com/@nonicalx" class="socials" target="_blank"><span><i
-                            class="fa fa-medium"></i></span></a>
-                <a href="https://github.com/nonicalx" class="socials" target="_blank"><span><i
-                            class="fa fa-github"></i></span></a>
-                <a class="btn btn-outline-secondary port_btn" href="/projects.html">portfolio</a>
-            </form>
-
-        </div>
-    </nav>
-    <div class="container-fluid">
-        <div class="row pt-5 mt-3">
-
-            <div class="col-md-4 d-flex align-items-center justify-content-center">
-                <div id="myImage">
-                    <img class="img" src="./assets/images/mydp.jpg" alt="nonsoOranye">
-                </div>
-            </div>
-            <div class="col-md-8 d-flex align-items-center justify-content-center">
-                <div id="aboutMe">
-                    <h3 class="text-center display-4 my-4 title">About me</h3>
-                    <hr>
-                    <p class="text-align: justify;"><strong id="hi">Hi</strong>, my name is Oranye Nonso.<br/>I am a software developer, with a vast skill and knowledge in developing frontend applications that are scalable and responsive.</p>
-                        <!-- As a man of few hobbies, I love to read, I read non-fictional books, fictional books, articles
-                        (thank you <strong><a href="https://www.medium.com" target="_blank">medium</a></strong>), comics
-                        (you should check out <strong><a href="https://www.thecomicrepublic.com"
-                                target="_blank">comicrepublic</a></strong>). Watching tv shows is another hobby of mine
-                        I think recently tv shows just trump movies hands down and finally, I like to play around with
-                        code, the ones I have written or stolen from <strong><a href="https://www.stackoverflow.com"
-                                target="_blank">stackoverflow</a></strong> or <strong><a
-                                href="http://www.codeproject.com" target="_blank">codeproject</a></strong>.</p>
-                </div> -->
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" id="skills">
-                <h3 class="text-center display-4 my-4 title">What I Can Do</h3>
-                <hr>
-                <div class="row">
-                    <div class="col-md-6 d-flex align-items-center justify-content-center"
-                        style="border-right: 1px solid lightgray">
-                        <ul class="list">
-                            <li>Frontend development with React.js</li>
-                            <li>Mobile App Development with React Native</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-center">
-                        <ul class="list">
-                            <li>Development of responsive websites and web apps using html, css, Js and BootStrap</li>
-                            <li>Mobile Development with Flutter</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- <div class="row" id="extra" style="padding: 20px">
-            <div class="col-4 d-flex align-items-center justify-content-center">
-                <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Projects</a>
-            </div>
-            <div class="col-4 d-flex align-items-center justify-content-center">
-                <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Books
-                    Read</a>
-            </div>
-            <div class="col-4 d-flex align-items-center justify-content-center">
-                <a name="" id="" class="btn btn-outline-success more" href="./projects.html" role="button">Favorite Tv
-                    Shows</a>
-            </div>
-        </div> -->
-
-        <div class="row">
-
-            <div class="col-md-12">
-                <h3 class="text-center display-4 my-4 title" id="Eee">Experience</h3>
-                <hr>
-
-                <div class="job mt-2 card_shadow jCenter">
-                    <p><strong>Full-Stack Developer</strong>,Genesys tech Hub<span><small class="period"> [June 2019 -
-                                present, 1 year, <small id="count">11</small> months]</small></span></p>
-                    <p><strong>Location:</strong> Centenary City, Enugu State</p>
-                    <p><strong>Job Role:</strong></p>
-                    <ul class="jobRole">
-                        <li>Frontend Development with React.js</li>
-                        <li>Backend Development with Node.js</li>
-                        <li>Meeting with Awesome people</li>
-                    </ul>
-                </div>
-
-                <div class="job mt-2 card_shadow jCenter">
-                    <p><strong>Frontend Developer</strong>,Hng Internship Program<span><small class="period"> [April
-                                2019 - May 2019, 1 month]</small></span></p>
-                    <p><strong>Location:</strong> Remote</p>
-                    <p><strong>Job Role:</strong></p>
-                    <ul class="jobRole">
-                        <li>Test of developed pages</li>
-                        <li>Check for feasibility of development of designed page</li>
-                        <li>Development of designed and approved pages</li>
-                    </ul>
-                </div>
-
-                <div class="job mt-2 card_shadow jCenter">
-                    <p><strong>IT Executive</strong>,Crestsage Limited<span><small class="period"> [May 2018 - May 2019,
-                                1 year]</small></span></p>
-                    <p><strong>Location:</strong> Lekki Phase 1, Lagos State</p>
-                    <p><strong>Job Role:</strong></p>
-                    <ul class="jobRole">
-                        <li>Project Management on field</li>
-                        <li>Solution Development</li>
-                        <li>Equipment diagnosis and fixture</li>
-                        <li>Resolving Networking issues in Security Systems</li>
-                    </ul>
-                </div>
-
-                <div class="job mt-2 card_shadow jCenter">
-                    <p><strong>Itern</strong>,Electronics Development Institute<span><small class="period"> [May 2016 -
-                                October 2016, 6 months]</small></span></p>
-                    <p><strong>Location:</strong> Abba, Anambra State</p>
-                    <p><strong>Job Role:</strong></p>
-                    <ul class="jobRole">
-                        <li>Carrying out research on artificial Intelligence</li>
-                        <li>Work with machine learning application called WEKA</li>
-                        <li>Fabricated trivial circuits using breadboards, microcontrollers and other electronic
-                            components</li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-        <div class="row mx-0 w-100">
-            <div class="col-md-12">
-                <footer class="footer">
-                    <span>
-                        Made with <i class="fa fa-heart pulse"></i> by <a href="https://nonso.netlify.com"
-                            target="_blank">Blue Blooded</a>
-                    </span>
-                </footer>
-
-            </div>
-        </div>
-    </div>
-    <script src="assets/script.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Nonso Oranye | Portfolio</title>
+  </head>
+  <body>
+    <article>
+      <section class="banner">
+        <h2>Hello</h2>
+        <p>I'm Nonso Oranye</p>
+        <p>&</p>
+        <p>I am a Front Developer</p>
+      </section>
+    </article>
+    <header class="header"><nav>Header</nav></header>
+    <main class="main">main content</main>
+    <footer class="footer">footer</footer>
+  </body>
 </html>
