--- a/index.html
+++ b/index.html
@@ -4,20 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Nonso Oranye | Portfolio</title>
   </head>
   <body>
     <article>
-      <section class="banner">
-        <h2>Hello</h2>
-        <p>I'm Nonso Oranye</p>
-        <p>&</p>
-        <p>I am a Front Developer</p>
+      <section class="banner" id="particles-js">
+        <div>
+          <h2>Hello,</h2>
+          <p>I'm Nonso Oranye.</p>
+          <br />
+          <p>I am a Front Developer</p>
+        </div>
       </section>
     </article>
-    <header class="header"><nav>Header</nav></header>
-    <main class="main">main content</main>
-    <footer class="footer">footer</footer>
+    <header class="header">
+      <nav>
+        <h5><span class="n-logo">N</span>onso Oranye</h5>
+        <ul class="nav-list">
+          <li>About</li>
+          <li>Projects</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <section class="about">
+        <div>
+          <div class="logo-container"><span class="n-logo-lg">N</span></div>
+        </div>
+        <div class="about-text">
+          I am Nonso, a highly creative Frontend developer with a knack for
+          implementing great designs to perfection that users love. I write code
+          that is great and so simple to understand that nobody on the team
+          loses their mind trying to comprehend it.<br />
+          I have worked with various teams over the years and built some awesome
+          projects using languages, libraries and frameworks such as Javascript,
+          typescript, Css, HTML, Bootstrap, React.js, Redux, Style-Components,
+          Next.js.
+        </div>
+      </section>
+    </main>
+    <footer class="footer">+ + + +</footer>
+
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- stats.js lib -->
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+
+    <script src="./assets/script.js"></script>
   </body>
 </html>
