--- a/index.html
+++ b/index.html
@@ -23,28 +23,97 @@
       <nav>
         <h5><span class="n-logo">N</span>onso Oranye</h5>
         <ul class="nav-list">
-          <li>About</li>
+          <li><a href="#about">About</a></li>
           <li>Projects</li>
           <li>Contact</li>
         </ul>
       </nav>
     </header>
     <main class="main">
-      <section class="about">
-        <div>
-          <div class="logo-container"><span class="n-logo-lg">N</span></div>
-        </div>
-        <div class="about-text">
-          I am Nonso, a highly creative Frontend developer with a knack for
-          implementing great designs to perfection that users love. I write code
-          that is great and so simple to understand that nobody on the team
-          loses their mind trying to comprehend it.<br />
-          I have worked with various teams over the years and built some awesome
-          projects using languages, libraries and frameworks such as Javascript,
-          typescript, Css, HTML, Bootstrap, React.js, Redux, Style-Components,
-          Next.js.
-        </div>
-      </section>
+      <article id="about">
+        <h3 class="section-header">About</h3>
+        <section class="about">
+          <div>
+            <div class="logo-container"><span class="n-logo-lg">N</span></div>
+          </div>
+          <div class="about-text">
+            I am Nonso, a highly creative Frontend developer with a knack for
+            implementing great designs to perfection that users love. I write
+            code that is great and so simple to understand that nobody on the
+            team loses their mind trying to comprehend it.<br />
+            I have worked with various teams over the years and built some
+            awesome projects using languages, libraries and frameworks such as
+            Javascript, typescript, Css, HTML, Bootstrap, React.js, Redux,
+            Style-Components, Next.js.
+          </div>
+        </section>
+
+        <section class="about-skill">
+          <!-- HTML -->
+          <div class="skill-rating">
+            <p class="skill-name">HTML</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 90%"></div>
+              <span>90%</span>
+            </section>
+          </div>
+          <!-- End of HTML -->
+          <!-- CSS -->
+          <div class="skill-rating">
+            <p class="skill-name">CSS</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 80%"></div>
+              <span>80%</span>
+            </section>
+          </div>
+          <!-- End of CSS -->
+          <!-- JS -->
+          <div class="skill-rating">
+            <p class="skill-name">Javascript</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 80%"></div>
+              <span>80%</span>
+            </section>
+          </div>
+          <!-- End of JS -->
+          <!-- BS -->
+          <div class="skill-rating">
+            <p class="skill-name">Bootstrap</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 77%"></div>
+              <span>77%</span>
+            </section>
+          </div>
+          <!-- End of BS -->
+          <!-- React -->
+          <div class="skill-rating">
+            <p class="skill-name">React</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 75%"></div>
+              <span>75%</span>
+            </section>
+          </div>
+          <!-- End React -->
+          <!-- React Native -->
+          <div class="skill-rating">
+            <p class="skill-name">React Native</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 55%"></div>
+              <span>55%</span>
+            </section>
+          </div>
+          <!-- End of Native -->
+          <!-- Flutter -->
+          <div class="skill-rating">
+            <p class="skill-name">Flutter</p>
+            <section class="progress">
+              <div class="progress-bar" style="width: 50%"></div>
+              <span>50%</span>
+            </section>
+          </div>
+          <!-- End of Flutter -->
+        </section>
+      </article>
     </main>
     <footer class="footer">+ + + +</footer>
 
